show description on scheduling edge; TODON conditionalDescription unnecessary?